Fixed layout issue on iOS

--- a/src/components/FigureSelectBar/styles.css
+++ b/src/components/FigureSelectBar/styles.css
@@ -35,6 +35,7 @@
 }
 
 .figure-select-bar .bar-content-container .toggles-container {
+    min-height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -57,6 +58,7 @@
 }
 
 .figure-select-bar .bar-content-container .figures-container {
+    min-height: fit-content;
     height: fit-content;
     width: 100%;
     display: grid;
